--- a/frontend/usuario/css/redaccion_articulos.css
+++ b/frontend/usuario/css/redaccion_articulos.css
@@ -95,6 +95,20 @@ textarea {
     background-color: #bbb;
 }
 
+.eliminarEtiquetaBtn {
+    background: black;
+    color: white;
+    border: none;
+    padding: 3px 7px;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 12px;
+}
+
+.eliminarEtiquetaBtn:hover {
+    background: darkred;
+}
+
 /* Estilos de las imágenes */
 #contenedorImagenes {
     display: flex;
@@ -103,22 +117,34 @@ textarea {
     margin-top: 10px;
 }
 
-.marcador-imagen {
-    width: 100px;
-    height: 100px;
-    background-color: #e0e0e0;
-    border: 2px dashed #bbb;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 12px;
-    color: #666;
-    cursor: pointer;
+.preview-imagen-container {
+    display: inline-block;
+    margin: 5px;
+    position: relative;
 }
 
-.marcador-imagen:hover {
-    background-color: #ccc;
+.preview-imagen {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
+
+.eliminar-imagen {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: black;
+    color: white;
+    border: none;
+    padding: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    border-radius: 50%;
+    font-size: 14px;
+}
+
+.eliminar-imagen:hover {
+    background: darkred;
 }
 
 /* Botones de acción */
