--- a/frontend/admin/css/dudas.css
+++ b/frontend/admin/css/dudas.css
@@ -1,4 +1,3 @@
-/* Estilos generales */
 * {
     margin: 0;
     padding: 0;
@@ -13,7 +12,6 @@ body {
     font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
-/* Sidebar */
 .sidebar {
     width: 260px;
     background-color: #f3f3f3;
@@ -93,7 +91,7 @@ body {
     bottom: 0;
 }
 
-/* Formulario de contacto */
+
 .contact-form-container {
     display: flex;
     flex-direction: column;
@@ -145,7 +143,7 @@ textarea:disabled {
     background-color: #333;
 }
 
-/* Media Queries */
+
 @media (max-width: 768px) {
     .sidebar {
         width: 100%;
@@ -170,37 +168,35 @@ textarea:disabled {
         justify-content: center;
     }
 }
-/* Contenedor del nombre y la imagen */
+
 .name-image-container {
     display: flex;
     align-items: center;
-    margin-bottom: 20px; /* Espacio entre los elementos */
+    margin-bottom: 20px; 
 }
 
-/* Campo de nombre */
+
 .name-container {
-    flex: 1; /* Toma el máximo espacio disponible */
-    margin-right: 20px; /* Espacio entre el campo de nombre y la imagen */
+    flex: 1; 
+    margin-right: 20px; 
 }
 
-/* Contenedor de la imagen */
+
 .image-container {
-    flex-shrink: 0; /* No permite que la imagen se reduzca */
+    flex-shrink: 0; 
 }
 
-/* Estilos para la imagen */
 .image-preview {
-    max-width: 100px; /* Ajusta el tamaño máximo de la imagen */
+    max-width: 100px; 
     height: auto;
     border-radius: 10px;
 }
 
-/* Estilos generales para los campos */
 input[type="text"],
 input[type="email"],
 textarea,
 .file-input {
-    width: 100%; /* Ocupa todo el ancho disponible */
+    width: 100%; 
     padding: 10px;
     margin: 5px 0;
     border: 1px solid #ccc;
@@ -209,9 +205,8 @@ textarea,
     color: #6c757d;
 }
 
-/* Estilo especial para el textarea (mensaje) */
 textarea {
-    height: 150px; /* Mayor altura para el campo de mensaje */
+    height: 150px; 
 }
 
 .submit-button {
@@ -228,33 +223,30 @@ textarea {
 .submit-button:hover {
     background-color: #333;
 }
-/* Estilos generales para los campos */
 input[type="text"],
 input[type="email"],
 textarea,
 .file-input {
-    width: 100%; /* Ocupa todo el ancho disponible */
+    width: 100%; 
     padding: 10px;
     margin: 5px 0;
     border: 1px solid #ccc;
     border-radius: 15px;
     background-color: #e9ecef;
     color: #6c757d;
-    resize: vertical; /* Permite al usuario redimensionar el textarea */
+    resize: vertical; 
 }
 
-/* Estilo especial para el textarea (mensaje) */
 textarea {
-    height: 150px; /* Altura inicial para el mensaje */
+    height: 150px; 
 }
 
-/* Retroalimentación (textarea) */
 .feedback-input {
-    min-height: 50px; /* Altura mínima */
-    resize: none; /* Evita que el usuario redimensione manualmente */
+    min-height: 50px; 
+    resize: none; 
 }
 
-/* Botón */
+
 .submit-button {
     background-color: #000;
     color: #fff;
