--- a/frontend/usuario/css/perfil.css
+++ b/frontend/usuario/css/perfil.css
@@ -98,3 +98,25 @@
 #boton-eliminar-cuenta {
     margin-left: 20px;
 }
+
+.card.articulo {
+    max-width: 200px;
+    margin: 10px auto; 
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
+}
+
+.card.articulo img {
+    height: 150px; 
+    object-fit: cover; 
+    border-radius: 10px; 
+}
+
+.card.articulo .card-title {
+    font-size: 1rem;
+    margin-top: 5px;
+}
+
+#contenedor-galeria-articulos .col-md-4 {
+    flex: 0 0 auto; 
+    max-width: 25%;
+}
