--- a/frontend/admin/css/estadisticas.css
+++ b/frontend/admin/css/estadisticas.css
@@ -105,7 +105,6 @@ body {
 
     .vertical-divider {
         display: none;
-        /* Oculta la línea divisoria vertical en pantallas pequeñas */
     }
 
     .header h1 {
@@ -132,19 +131,17 @@ body {
     display: block;
 }
 
-/* Centrar la barra de navegación de secciones */
 .tabs {
     display: flex;
-    justify-content: center; /* Centra las pestañas */
-    gap: 20px; /* Espaciado entre pestañas */
-    padding: 10px 0; /* Espaciado vertical dentro de la barra */
-    background-color: #f8f9fa; /* Fondo de la barra (opcional, ajusta según el diseño) */
-    border-bottom: 2px solid #ddd; /* Línea debajo de las pestañas (opcional) */
+    justify-content: center; 
+    gap: 20px; 
+    padding: 10px 0; 
+    background-color: #f8f9fa; 
+    border-bottom: 2px solid #ddd; 
 }
 
-/* Estilo para cada pestaña */
 .tabs .tab-link {
-    padding: 10px 20px; /* Espaciado interno en cada pestaña */
+    padding: 10px 20px; 
     border: 1px solid #ccc;
     border-radius: 5px;
     text-decoration: none;
@@ -154,40 +151,34 @@ body {
     transition: all 0.3s ease;
 }
 
-/* Cambia el estilo al pasar el mouse */
 .tabs .tab-link:hover {
     background-color: #ddd;
     color: #000;
 }
 
-/* Indica la pestaña activa */
 .tabs .active {
     background-color: #4a5461;
     color: white;
     border-color: #212529;
 }
 
-/* Centrar el grupo de botones */
 .btn-group {
     display: flex;
-    justify-content: center; /* Centra horizontalmente */
-    margin-top: 30px; /* Ajusta la distancia desde la parte superior */
+    justify-content: center; 
+    margin-top: 30px; 
 }
 
-/* Opcional: Personaliza el estilo de los botones */
 .btn-group .btn {
     background-color: #4a5461;
     color: white;
     border: none;
-    margin: 0 30px; /* Espaciado horizontal entre los botones */
-    padding: 10px 10px; /* Ajusta el tamaño interno de los botones */
-    font-weight: bold; /* Letras más destacadas */
-    transition: all 0.3s ease; /* Animación suave al interactuar */
-}
+    margin: 0 30px; 
+    padding: 10px 10px; 
+    font-weight: bold; 
+    transition: all 0.3s ease; 
 
-/* Cambia el estilo de los botones al pasar el cursor */
 .btn-group .btn:hover {
     border: none;
-    background-color: #212529; /* Color de fondo al pasar el mouse */
-    color: white; /* Color del texto al pasar el mouse */
+    background-color: #212529; 
+    color: white; 
 }
