--- a/frontend/publico/css/estiloconocenos.css
+++ b/frontend/publico/css/estiloconocenos.css
@@ -77,4 +77,24 @@ h4 {
     max-height: 100%;
     cursor: pointer;
   }
-  
+
+  form {
+    max-width: 600px;
+    margin: 0 auto; 
+    margin-bottom: 40px; 
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px; 
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+}
+
+form .form-control {
+    margin-bottom: 15px; 
+    padding: 10px; 
+    font-size: 1rem; 
+}
+
+form button {
+    padding: 10px 15px; 
+    font-size: 1.2rem; 
+}
