--- a/frontend/usuario/css/articulos.css
+++ b/frontend/usuario/css/articulos.css
@@ -123,3 +123,11 @@
     color: #555;
     font-size: 14px;
 }
+
+#btn-reportar {
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 8px;
+    font-weight: bold;
+    margin-bottom: 40px;
+}
