--- a/frontend/usuario/css/articulos.css
+++ b/frontend/usuario/css/articulos.css
@@ -125,9 +125,29 @@
 }
 
 #btn-reportar {
+    background-color: #49494A; /* Verde */
+    color: white;
+    border: none;
     padding: 10px 20px;
     font-size: 16px;
     border-radius: 8px;
     font-weight: bold;
     margin-bottom: 40px;
+}
+
+.btn-reportar-comentario {
+    background-color: #49494A; /* Verde */
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 12px; 
+    font-weight: bold;
+    cursor: pointer;
+    width: 80px; /* Ajusta el ancho a tu preferencia */
+    text-align: center;
+}
+
+.btn-reportar-comentario:hover {
+    background-color: #49494A; /* Un tono más oscuro al pasar el ratón */
 }
