--- a/frontend/usuario/css/redaccion_articulos.css
+++ b/frontend/usuario/css/redaccion_articulos.css
@@ -109,12 +109,28 @@ textarea {
     background: darkred;
 }
 
-/* Estilos de las imágenes */
+.foto-articulo img {
+    width: 100px;
+    height: 100px;
+    margin: 5px;
+    border-radius: 8px; 
+}
+
 #contenedorImagenes {
+    border: 2px dashed #ccc;
+    padding: 10px;
+    width: 100%;
+    height: 200px;
+    overflow-y: auto;
     display: flex;
-    gap: 10px;
-    flex-wrap: wrap;
-    margin-top: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+#contenedorImagenes img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
 }
 
 .preview-imagen-container {
@@ -224,4 +240,17 @@ button {
 #cancelarEliminarBtn {
     background-color: #ccc;
     color: #000;
+}
+#cambiar-imagen-modal .modal-body img {
+    width: 150px;  /* Ajusta el tamaño según tus necesidades */
+    height: auto;  /* Mantiene la proporción original */
+}
+#foto-perfil-seleccionada {
+    width: 150px;  /* Ajusta el tamaño según tus necesidades */
+    height: auto;  /* Mantiene la proporción original */
+    border-radius: 50%;
+}
+.img-small {
+    width: 100px;  /* Ajusta este valor para que sea el tamaño que prefieras */
+    height: auto;
 }
