--- a/frontend/publico/css/navbar.css
+++ b/frontend/publico/css/navbar.css
@@ -1,4 +1,4 @@
-.user-info img {
+#navbar-info-usuario-foto {
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -12,12 +12,4 @@
 
 #nombre-rol {
     margin-right: 1em;
-}
-
-#navbar-info-usuario-nombre a {
-    color: #000000; 
-}
-
-#navbar-info-usuario-nombre a:hover {
-    color: #0088c7; 
 }
