--- a/frontend/publico/css/estiloinicio.css
+++ b/frontend/publico/css/estiloinicio.css
@@ -70,3 +70,8 @@ h2{
     color: black;
     text-decoration: none;
 }
+
+/* Mostrar los títulos por defecto */
+#seccion-titulo {
+    display: block;
+}
