--- a/frontend/usuario/css/articulos.css
+++ b/frontend/usuario/css/articulos.css
@@ -71,6 +71,7 @@
     border-radius: 8px;
     padding: 16px;
     background-color: #f9f9f9;
+    margin-bottom: 80px;
 }
 
 /* Input para escribir comentarios */
